--- a/ProgettoOrientamento/app/src/main/res/layout/activity_main.xml
+++ b/ProgettoOrientamento/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:ems="10"
         android:hint="password"
         android:inputType="text"
+        android:password="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
@@ -38,6 +39,7 @@
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:password="false"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
